@@ -103,6 +103,7 @@ SubVersion: $Id$
 	                 DCOP operations now return true if TiEmu was ready and false if it wasn't (and rejected the operation)
 	- [kevin] $1883: implemented execute_command in the DCOP interface
 	- [kevin] $1886: added turn_calculator_on command to the DCOP interface
+	- [kevin] $1889: adjust to libtifiles2 re-reversion to file names in glib filename charset
 	
 	Note: trunk forked into tiemu-debugging-branch at rev. $983 and has been merged back 
 		into the trunk at rev. $1695.	
